--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/reserva_quadra
-spring.datasource.username=root
-spring.datasource.password=alpha
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.profiles.active=test
+
+
+##spring.datasource.url=jdbc:mysql://localhost:3306/reserva_quadra
+##spring.datasource.username=root
+##spring.datasource.password=alpha
+##spring.jpa.hibernate.ddl-auto=create
+##spring.jpa.show-sql=true
+##spring.jpa.properties.hibernate.format_sql=true
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
