--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,3 +8,4 @@ spring.jpa.database-plataform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
